apps/services/jellyfin/jellyseerr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f apps/services/jellyseerr/docker-compose.yaml -o apps/services/jellyseer/app/
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: jellyseerr
  name: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jellyseerr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f apps/services/jellyseerr/docker-compose.yaml -o apps/services/jellyseer/app/
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/jellyseerr-default: "true"
        io.kompose.service: jellyseerr
    spec:
      containers:
        - env:
            - name: LOG_LEVEL
              value: debug
            - name: PORT
              value: "5055"
            - name: TZ
              value: America/New_York
          image: fallenbagel/jellyseerr:latest
          name: jellyseerr
          ports:
            - containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr-config
      restartPolicy: Always
      volumes:
        - name: jellyseerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-config
